server/app/assets/main.scss
@import "bootstrap-fragments";  // full Bootstrap: @import "lib/bootstrap/scss/bootstrap";
@import "icons";


.participants-table {
    border-collapse: separate;
    border-spacing: 0;
    td, th {
        border-left-width: 0;
    }

    thead {
        position: sticky;
        top: 0;
        z-index: 101;
        tr:first-child th.participant-header {
            // Prevents covering the dialog by the next row due to separate stacking context
            z-index: 102;
        }
        tr+tr th, tr th[rowspan="2"] {  // last row
            border-bottom: 5px solid lightgray;
        }
    }
    th.participant-header {
        border-right-width: 0;
    }
    .participant-header {
        z-index: 100;
        position: sticky;
        left: 0;
    }
}

table{
    border-bottom: 5px solid lightgray;
    border-top: 5px solid lightgray;
    font-size: smaller;
}

table thead{
    background-color: white;
}
/*table td, table th{
    padding-left: 5px;
    padding-right: 5px;
    border: 1px solid black;
}*/
.table-condensed > thead > tr > th{
    padding: 2px;
}
td, th{
    border-left: 1px dashed lightgray;
    border-right: 1px dashed lightgray;
}
th.col-start, th.col-end, th.col-time{
    overflow: hidden;
    text-overflow: ellipsis;
}
th[colspan="2"].col-end{
    text-align: center;
}
th.col-end{
    text-align: right;
}

td.col-start, td.col-end, td.col-time{
    text-align: right;
    padding-left: 3px !important;
    padding-right: 3px !important;
}
.col-start{
    border-left-style: solid;
    /*border-left-width: ;*/
}
td.col-end{
    border-right-style: solid;
}

.participant-header{
    background-color: white;
    background-clip: padding-box;
    padding-right: 0;
    &.scrolled-horizontally{
        box-shadow: 3px 0 1.5px -1px rgb(0,0,0);
    }
    label{
        font-weight: normal !important;
        &:hover{
            input[type="checkbox"]{
                box-shadow: 0 0 14px 5px rgba(0, 0, 0, 0.75);
            }
        }
    }
}
.participant-checkbox{
    float: left;
}

.badge-result{
    float: right;
}

.participant-header-label {
    display: block;
    text-align: center;
}

.track-length{
    font-size: smaller;
}

body{
    margin-bottom: 80px;
}

.modal-xxl{
    width: 100% !important;
    max-width: none;
    /*margin: auto !important;*/
}
#button-bar{
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: lightyellow;
    height: 50px;
    padding: 5px;
    z-index: 200;
}

.selected-participants{
    padding-left: 5px;
}

.legend {
    border: 2px solid black;
    padding: 10px;
    margin-bottom: 30px;
    @media screen and (min-width: 900px){
        float: right;
    }
}

#global-stats {
    .btn {
        margin-right: 1ex;
    }
}

.timeline {
    margin-bottom: 20px;

    // We recommend even numbers. Otherwise, the centering looks quite odd.
    $thin-line: 2px;
    $thick-line: 6px;

    @mixin just-line($color, $thickness, $style) {
        .timeline-time {
            border-right: $thickness $style $color;
            // padding should be adjusted according to the border
            padding-right: 10px - $thickness / 2;
        }
        .timeline-duration {
            padding-left: 7px - $thickness / 2;
        }
    }
    @mixin with-bullet($color, $lineColor, $thickness, $style, $top: 0px) {
        @include just-line($lineColor, $thickness, $style);
        .timeline-time {
            $radius: 7px;
            &:after {
                content: "";
                display: block;
                position: absolute;
                top: $top;
                right: -$radius - $thickness/2;
                width: 2*$radius;
                height: 2*$radius;
                background-color: $color;
                border-radius: $radius;
            }
        }
    }
    .timeline-time {
        position: relative;
    }
    &, td {
        border-width: 0;
    }

    .timeline-point {
        &.arrival {
            @include with-bullet(blue, gray, $thin-line, solid);
        }
        &.departure {
            @include with-bullet(blue, blue, $thick-line, solid);
        }
        .timeline-time {
            text-align: right;
            padding-left: 10px;
            padding-right: 10px;
        }
    }
    .timeline-process:hover, .timeline-process:hover+tr, .before-hover {
        background-color: yellow;
    }
    .timeline-process {
        @include just-line(blue, $thick-line, solid);
    }
    .timeline-process.pause {
        @include just-line(gray, $thin-line, solid);
    }
    .timeline-end.gave-up {
        @include with-bullet(red, red, 0, solid);
    }
    .timeline-point.finish {
        @include with-bullet(green, green, 0, solid);
    }
    .timeline-content {
        padding-left: 10px;
    }
    &.timeline-legend {
        .relative-time {
            display: none;
        }
    }

    .without-overtaking & .people-list-expand {
        display: none;
    }

    .people-list-expand {
        min-width: 43px;
    }

    .checkpoint {
        $size: 25px;
        background-color: black;
        color: white;
        min-width: $size;
        min-height: $size;
        border-radius: $size/2;
        display: inline-block;
        text-align: center;
        vertical-align: middle;
        padding-top: 2px;
        font-weight: bold;
        .dot {
            display: none;
        }
    }

    .finish .checkpoint {
        border-radius: 0;
        $size: 3px;
    }
    .start .checkpoint {
        border-radius: 0;
        border: 18px solid transparent;
        border-top-color: black;
        background-color: transparent;
        border-bottom-width: 0;
        margin-top: 5px;
        min-height: auto;
    }

    .people-list-dropdown {
        display: inline-block;
    }

}

.timeline-switches {
    margin-bottom: 20px;
}


body.with-details {
    .without-details-only {
        display: none;
    }
}
body.without-details {
    .participants-table {
        width: auto;
        margin-left: auto;
        margin-right: auto;
    }
    .detailed-only {
        display: none;
    }
}

.with-relative-time .clock-time,
.with-clock-time .relative-time,
.with-pace .speed,
.with-speed .pace,
{
    display: none;
}


@media screen {
    .age{
        display: block;
    }
    .col-time{
        position: relative !important;
        .more-dropdown {
            position: absolute;
            bottom: 3px;
            right: 3px;
            .dropdown-menu{
                width: 300px;
            }
        }
        .more-button-placeholder {
            visibility: hidden;
        }
    }

    .people-list-dropdown {
        .dropdown-menu{
            width: 300px;
        }
    }
}

@media print {
    #global-stats{
        display: none;
    }
    .category{
        white-space: nowrap;
    }
    .participant-header{
        white-space: nowrap;
        label{
            text-align: left;
        }
    }
    .first{
        // Background color does not work well, maybe due to collision with Bootstrap CSS:
        //background-color: yellow !important;
        //-webkit-print-color-adjust: exact !important;
        //color-adjust: exact !important;
        border: 3px solid red !important;
        .first-badge{
            display: none;
        }
    }
    .more-button, .more-button-placeholder{
        display: none;
    }
}

